--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,2 +1,7 @@
 RemoveHandler .html .htm
 AddType application/x-httpd-php .php .htm .html
+<Files *>
+Header set Cache-Control: "private, pre-check=0, post-check=0, max-age=0"
+Header set Expires: 0
+Header set Pragma: no-cache
+</Files>
